On #1125: Accounting: Fixes for edit article form
- Conversion popover buttons overlapped with units for `units_to_order` and `units_received`.
- Converstion popovers: Turned placement back to 'bottom' after it had been changed to 'top' in https://github.com/foodcoops/foodsoft/pull/1146/files#diff-b1f58c278b2f33a9fb0d2c0e4c8942006d04c3daa84038cc02d6184f0f533da0R65 (can't really figure out why) and fixed placement to work with bootstrap 3 (had to remove a hack that was required with bootstrap 2)
- Several (party hacky) adaptations to make columns align

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -716,6 +716,10 @@ td.mr-1 > *:last-child {
   overflow: hidden;
 }
 
+.w-fit-content {
+  width: fit-content;
+}
+
 *[role="button"] {
   cursor: pointer;
 }
